# Littlenote

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
config/: context_processors.py  urls.py
config/settings/: base.py  local.py  production.py
docs/: design.md
src/apps/accounts/: tests.py  urls.py  views.py
src/apps/common/: middleware.py  tests.py
src/apps/journal/: admin.py  apps.py  models.py  urls.py  views.py
src/apps/notes/: apps.py  models.py  urls.py  views.py
src/apps/pages/: apps.py  constants.py  urls.py  views.py
src/static/css/: app.css  base.css  home.css  little.css  reset.css  style.css
src/static/js/: htmx.min.js
src/templates/: app.html  app_nav.html  base.html
src/templates/pages/: dashboard.html  home.html
src/templates/partials/: footer.html  navbar.html
src/tests/: test_auth_flow.py
src/tests/helpers/: interactions.py
tests/functional/: test_auth.py  test_auth_flows.py  test_curiosity.py  test_determination.py  test_notes.py  test_notes_flows.py  test_signup.py  test_ui.py
tests/functional/happy/: test_login_success.py  test_signup_success.py
tests/functional/happy_paths/: test_login_success.py  test_signup_success.py
tests/functional/helpers/: interactions.py
tests/functional/sad/: test_login_errors.py
tests/happy/: test_login.py  test_signup.py
tests/happy_paths/: test_login_success.py  test_signup_success.py
tests/integration/: test_auth.py  test_auth_flows.py  test_models.py  test_views.py
tests/sad_paths/: test_login_errors.py
tests/unit/: test_auth_utils.py
(+49 files in other folders)
