[project]
name = "Littlenote"
version = "0.1.0"
description = "A public note-taking platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.4",
    "django-cotton>=2.1.3",
    "django-ratelimit>=4.1.0",
    "markdown>=3.8.2",
    "psycopg[binary]>=3.2.10",
    "python-decouple>=3.8",
    "resend>=2.15.0",
]

[project.optional-dependencies]
production = [
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = ["selenium>=4.34.2"]
